# groom4j

./: .env.example  .gitignore  Dockerfile  README.md  ToDo.md  agent.py  application_example.yml  ask.py  config_utils.py  conversation_reviewer.py  functions.py  gist_api.py  gist_files.py  gist_packages.py  grooming_task.py  inspiration.md  llm_anthropic.py  llm_gemini.py  llm_google_genai.py  llm_google_vertexai.py  llm_interaction.py  llm_openai.py  llm_router.py  openai_test.py  projectfiles.py  pyproject.toml  read-agent-java.ipynb  requirements.txt  rewrite_question.py  run-read-agent.sh  summarize_api.py  tell_me_about.py  test_ask.py  test_functions.py  test_grooming_task.py  test_llm_anthropic.py  test_llm_gemini.py  test_llm_openai.py  test_llm_router.py  test_projectfiles.py  (+2 more)
docs/: ask.excalidraw  gist_files.excalidraw  gist_packages.excalidraw  inspect_api_by_url.md  inspect_api_data_flow.md  package_file_graph.excalidraw  tell_me_about.md  travel_service_project_structure.excalidraw
docs/dspy/: dspy_basic_1.ipynb  (+5 more)
integration/: __init__.py  my_jira.py
llm_client/: __init__.py  config.py  gemini_test.py  langfuse_setup.py  llm_anthropic.py  llm_google_vertexai.py  llm_openai.py  llm_router.py  openai_test.py
testing/: application_test.yml  mock_anthropic_assistant.py  mock_llm_router.py  mock_openai_assistant.py  mock_vertex_assistant.py  test_config_utils.py  test_conversation_reviewer.py  test_functions.py  test_gist_files.py  test_grooming_task.py  test_llm_anthropic.py  test_llm_gemini.py  test_llm_openai.py  test_llm_router.py  test_projectfiles.py
(+84 files in other folders)
